--- a/d3_sample/index.html
+++ b/d3_sample/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>A graph</title>
     <!-- Load d3.js -->
-    <!-- <script src="https://d3js.org/d3.v4.js"></script> -->
+    <script src="https://d3js.org/d3.v4.js"></script>
 
     <!-- new version of d3.js -->
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
     <script src="script.js" defer></script>
 </head>
 
